fixing overlap issue with map::after pseudoelement

--- a/src/style.scss
+++ b/src/style.scss
@@ -144,19 +144,6 @@ div#tsml-ui {
       max-height: 1000px;
       overflow: hidden;
       position: relative;
-
-      //user can provide css to use custom image here
-      &::after {
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        bottom: 0;
-        content: '';
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-      }
     }
 
     .map {
